     without the user having performed any activitity with GitHub. For
     example, a new repository could might be added to an Organization to
     which the user is associated, so the user would then have access to the
     new repo; a cache update would be needed to have that new repo reflected
     in the local cache, however.


* ads-github-tools 0.3.3 (2021-03-27)

** fixes

*** issue 39: "ads-github-fetch-all-upstreams: default to triangular workflow, but allow override" (reopened)

    https://github.com/salewski/ads-github-tools/issues/39

    This issue was originally noted as fixed in ads-github-tools 0.3.1, but a
    bug was found with the implementation. The '--triangular' and
    '--no-triangular' options worked as advertized, but the default behavior
    of the app was inconsistent with what was documented. The documentation
    indicated that the default behavior was that the tool would use a
    triangular configuration when cloning a repo if the user did not otherwise
    specify a preference, and that was indeed the intention.

    The program's behavior has been corrected to be consistent with the
    documentation in this regard; by default a triangular configuration will
    be used.


*** issue 64: "ads-github-repo-create: JSON string values not properly escaped"

    https://github.com/salewski/ads-github-tools/issues/64

    The 'ads-github-repo-create' tool shipped with ads-github-tools-0.3.2 (and
    earlier) did not properly escape JSON strings during new repo
    creation. When users supplied command line parameters that contained
    string values that would need such escaping in a JSON document, the
    program submitted JSON to the GitHub API that was not well-formed. That
    resulted in an HTTP 400 response, with the response body:

    :    {"message":"Problems parsing JSON","documentation_url":"https://docs.github.com/rest/reference/repos#create-a-repository-for-the-authenticated-user"}
